#9233 [기본 SCSS] itsm
- import 순서 정리
- 이미지 경로 깨지는 현상 수정
- 게시글 댓글 디자인 수정
- edit format 깨지는 현상 수정

--- a/src/main/resources/public/src/scss/template/_mixins.scss
+++ b/src/main/resources/public/src/scss/template/_mixins.scss
@@ -78,7 +78,7 @@
     background-color: $white;
     display: flex;
     flex-grow: 1;
-    height: calc(100vh - 10.375rem);
+    height: calc(100% - 10.375rem);
     &.flex-column {
       flex-direction: column;
     }
