--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -15,7 +15,7 @@
                 <h6 class="title-description" th:text="#{image.msg.description}"></h6>
             </div>
             <div class="search-area">
-                <div class="left">
+                <div class="search-input">
                     <form id="searchFrm">
                         <input class="search col-5" id="searchValue" name="searchValue" type="text" maxlength="100"
                                th:placeholder="이미지명"/>
