--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -17,7 +17,7 @@
         </div>
         <div id="search-area" class="search-area">
             <div>
-                <div class="left">
+                <div class="search-input">
                     <form id="frmSearch">
                         <select class="col-3" name="searchTokenType" id="searchTokenType">
                             <option value="token.type.todo" th:text="#{token.type.todo}" selected/>
