--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -22,7 +22,7 @@
             </div>
             <div class="form-set">
                 <label class="required" th:text="#{customCode.label.type}"></label>
-                <div class="radio-row">
+                <div class="flex-row">
                     <label class="radio" for="table" tabindex="0">
                         <input id="table" name="type" type="radio"
                                th:checked="${customCode?.type == null || customCode?.type == 'table'}"
