--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -159,7 +159,7 @@
                 <h6 class="title-description" th:text="#{document.msg.listDescription}"></h6>
             </div>
             <div class="search-area">
-                <div class="left">
+                <div class="search-input">
                     <form id="searchDocumentsFrm">
                         <input type="text" id="searchDocuments" name="searchDocuments"
                                th:placeholder="#{document.label.searchPlaceholder}" class="search col-4"/>
