--- a/src/main/resources/public/template/layout/defaultLayout.html
+++ b/src/main/resources/public/template/layout/defaultLayout.html
@@ -10,7 +10,7 @@
 		<div class="alice-wrapper">
 			<th:block th:replace="layout/navigation">menu</th:block>
 			<th:block th:replace="layout/menu">menu</th:block>
-			<div class="container">
+			<div class="itsm-container">
 				<th:block layout:fragment="content"></th:block>
 			</div>
 			<footer th:replace="layout/fragments/commonFooter :: commonFooter"></footer>
