--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -14,7 +14,7 @@
             <h6 class="title-description" th:text="#{notice.msg.description}"></h6>
         </div>
         <div class="search-area">
-            <div class="left">
+            <div class="search-input">
                 <input type="hidden" name="isRole" sec:authorize="hasAuthority('notice.update')" th:value="true"/>
                 <input type="hidden" name="isRole" sec:authorize="!hasAuthority('notice.update')" th:value="false"/>
                 <form id="searchFrm">
@@ -26,7 +26,7 @@
                     <input class="search-date" type="hidden" id="toDt" name="toDt" readonly="readonly"/>
                 </form>
             </div>
-            <div class="right">
+            <div class="ml-auto">
                 <button class="default-fill" onclick="location.href='/notices/new'" type="button"
                         sec:authorize="hasAuthority('notice.create')" th:text="#{common.btn.add}"></button>
             </div>
