--- a/src/main/resources/public/template/process/processAdminSearch.html
+++ b/src/main/resources/public/template/process/processAdminSearch.html
@@ -16,10 +16,10 @@
         </div>
         <div class="search-area">
             <input type="hidden" id="updatable" th:value="${#authorization.expression('hasAuthority(''process.update'')')}"/>
-            <div class="left">
+            <div class="search-input">
                 <input class="search col-5" id="search" type="text" maxlength="100" th:placeholder="#{process.label.searchPlaceholder}">
             </div>
-            <div class="right">
+            <div class="ml-auto">
                 <button th:class="default-line" onclick="openProcessImport();" sec:authorize="hasAuthority('process.create')" th:text="#{process.btn.import}"></button>
                 <button th:class="default-fill" onclick="openProcessEdit();" sec:authorize="hasAuthority('process.create')" th:text="#{common.btn.add}"></button>
             </div>
