select box 디자인 적용 - 소스정리 및 disabled 적용, 값 전송 테스트 완료

--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -292,6 +292,12 @@ select {
       background: url($icon-folder-path + "icon_arrow_up.svg") no-repeat center left;
     }
   }
+  &.disabled-select {
+    color: $element-disabled-font-color;
+    background-color: $element-disabled-bg-color;
+    pointer-events: none;
+    cursor: default;
+  }
 }
 
 .designed-options {
