#9233 [기본 SCSS] itsm
- edit format 깨지는 현상 수정
- 이미지 경로 깨지는 현상 수정
- 일부 클래스명 변경
- 중복되는 속성의 클래스 제거

--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -3590,7 +3590,7 @@ button.ghost-line:disabled .icon {
   background-color: #ffffff;
   display: flex;
   flex-grow: 1;
-  height: calc(100vh - 10.375rem);
+  min-height: calc(100vh - 10.375rem);
 }
 
 .portal-search-view .flex.flex-column {
