--- a/src/main/resources/public/template/auth/authList.html
+++ b/src/main/resources/public/template/auth/authList.html
@@ -13,7 +13,7 @@
     </tr>
     </thead>
     <tbody class="list-body">
-        <tr class="no-data-found" th:if="${#arrays.isEmpty(authList)}">
+        <tr class="no-data-found-list" th:if="${#arrays.isEmpty(authList)}">
             <td colspan="3" th:text="#{common.msg.noData}"></td>
         </tr>
         <tr th:each="auth : ${authList}">
