--- a/src/main/resources/public/template/boardAdmin/boardCategoryEdit.html
+++ b/src/main/resources/public/template/boardAdmin/boardCategoryEdit.html
@@ -29,7 +29,7 @@
                     <input type="text" id="boardCategorySort" maxlength="2" onKeyup="this.value=this.value.replace(/[^0-9]/g,'');"/>
                 </div>
             </div>
-            <div class="btn-list btn-bar">
+            <div class="btn-list">
                 <button class="point-fill" onclick="saveBoardCategory('post')" th:text="#{common.btn.add}"></button>
                 <a class="btn default-line" href="/board-admin/search" th:text="#{common.btn.list}"></a>
             </div>
