--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -67,7 +67,7 @@
                     <input type="text" id="pCode" maxlength="100" th:value="${customCode?.pCode}">
                 </div>
             </div>
-            <div class="btn-bar">
+            <div class="btn-list">
                 <a class="btn default-line" href="/custom-codes/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
