--- a/src/main/resources/public/template/document/documentEdit.html
+++ b/src/main/resources/public/template/document/documentEdit.html
@@ -88,7 +88,7 @@
         </div>
     </div>
     <div class="horizontal-bar"></div>
-    <div class="btn-list btn-bar">
+    <div class="btn-list">
         <button class="point-fill" th:if="${documentId}" onclick="saveDocument('put')" th:text="#{common.btn.modify}"></button>
         <button class="point-fill" th:unless="${documentId}" onclick="saveDocument('post')" th:text="#{common.btn.register}"></button>
         <button class="point-line" th:if="${documentId}" onclick="openDisplay();" th:text="#{document.label.display}"></button>
