--- a/src/main/resources/public/template/faq/faqView.html
+++ b/src/main/resources/public/template/faq/faqView.html
@@ -27,7 +27,7 @@
                 <pre><span th:text="${faq?.faqContent}"/></pre>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="btn-bar">
+            <div class="btn-list">
                 <a class="btn default-line" href="/faqs/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
