--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -38,7 +38,7 @@
                 </form>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="btn-bar">
+            <div class="btn-list">
                 <a class="btn default-line" href="/notices/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
