--- a/src/main/resources/public/template/process/processImport.html
+++ b/src/main/resources/public/template/process/processImport.html
@@ -24,7 +24,7 @@
             <div id="dropZoneUploadedFiles"></div>
         </div>
         <div class="horizontal-bar"></div>
-        <div class="btn-list btn-bar">
+        <div class="btn-list">
             <button class="point-fill" th:text="#{common.btn.save}" onclick="javascript:importProcess();"></button>
             <button class="default-line" th:text="#{common.btn.cancel}" onclick="javascript:window.close();"></button>
         </div>
