--- a/src/main/resources/public/src/scss/template/_alignments.scss
+++ b/src/main/resources/public/src/scss/template/_alignments.scss
@@ -22,7 +22,7 @@ $vertical-align-type: (baseline, top, middle, bottom, text-bottom, text-top);
 
 $float-align-type: (clear, left, right);
 @each $direction in $float-align-type {
-  z.float-#{$direction} {
+  .float-#{$direction} {
     @if $direction == 'clear' {
       clear: both;
     } @else {
