--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
@@ -2,7 +2,7 @@
 .contents-edit {
     @include contents-template();
     @include edit-template();
-    .btn-bar {
+    .btn-list {
         padding: 2.5rem 0 3.125rem 0; // 40px 0 50px 0
     }
     .image-list {
