--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -67,7 +67,7 @@
                                th:value="${boardInfo?.createDt} ? ${boardInfo.createDt} : ''"/>
                     </div>
                 </div>
-                <div class="btn-list btn-bar">
+                <div class="btn-list">
                     <button class="point-fill" sec:authorize="hasAuthority('board.create')"
                             th:if="${boardInfo?.boardId} and ${boardAdminInfo.replyYn} and ${replyYn}"
                             onclick="saveBoard('post', 'reply')"
