--- a/src/main/resources/public/template/board/boardList.html
+++ b/src/main/resources/public/template/board/boardList.html
@@ -19,7 +19,7 @@
     </thead>
     <tbody class="list-body">
     <input type="hidden" id="totalCount" th:value="${boardCount}"/>
-    <tr class="no-data-found" th:if="${#arrays.isEmpty(boardList)}">
+    <tr class="no-data-found-list" th:if="${#arrays.isEmpty(boardList)}">
         <td colspan="7" th:text="#{common.msg.noData}"></td>
     </tr>
     <tr th:each="board : ${boardList}">
