--- a/src/main/resources/public/template/document/documentAdminList.html
+++ b/src/main/resources/public/template/document/documentAdminList.html
@@ -19,7 +19,7 @@
     </thead>
     <tbody class="list-body">
     <input type="hidden" id="totalCount" th:value="${documentCount}"/>
-    <tr class="no-data-found" th:if="${#arrays.isEmpty(documentList)}">
+    <tr class="no-data-found-list" th:if="${#arrays.isEmpty(documentList)}">
         <td colspan="7" th:text="#{common.msg.noData}"></td>
     </tr>
     <tr th:unless="${#arrays.isEmpty(documentList)}" th:each="document: ${documentList}">
