--- a/src/main/resources/public/template/download/downloadList.html
+++ b/src/main/resources/public/template/download/downloadList.html
@@ -18,7 +18,7 @@
         </thead>
         <tbody class="list-body">
         <input type="hidden" id="totalCount" name="totalCount" th:value="${downloadCount}"/>
-        <tr class="no-data-found" th:if="${#arrays.isEmpty(downloadList)}">
+        <tr class="no-data-found-list" th:if="${#arrays.isEmpty(downloadList)}">
             <td colspan="6" th:text="#{common.msg.noData}"></td>
         </tr>
         <tr th:each="download : ${downloadList}">
