--- a/src/main/resources/public/template/form/formAdminList.html
+++ b/src/main/resources/public/template/form/formAdminList.html
@@ -19,7 +19,7 @@
     </thead>
     <tbody class="list-body">
     <input type="hidden" id="totalCount" th:value="${formListCount}"/>
-    <tr class="no-data-found" th:if="${#arrays.isEmpty(formList)}">
+    <tr class="no-data-found-list" th:if="${#arrays.isEmpty(formList)}">
         <td colspan="7" th:text="#{common.msg.noData}"></td>
     </tr>
     <tr th:unless="${#arrays.isEmpty(formList)}" th:each="form: ${formList}">
