--- a/src/main/resources/public/template/form/formAdminView.html
+++ b/src/main/resources/public/template/form/formAdminView.html
@@ -18,7 +18,7 @@
             <textarea id="form_desc" th:text="${formInfo?.desc}" class="textarea-scroll-wrapper" disabled/>
         </div>
         <div class="horizontal-bar"></div>
-        <div class="btn-bar">
+        <div class="btn-list">
             <button class="default-fill" th:attr="onclick=|window.close()|" th:text="#{common.btn.close}"></button>
         </div>
     </div>
