--- a/src/main/resources/public/template/notice/noticeList.html
+++ b/src/main/resources/public/template/notice/noticeList.html
@@ -18,7 +18,7 @@
         </thead>
         <tbody class="list-body">
             <input th:type="hidden" id="totalCount" name="totalCount" th:value="${noticeCount}"/>
-            <tr class="no-data-found" th:if="${#arrays.isEmpty(noticeList)}">
+            <tr class="no-data-found-list" th:if="${#arrays.isEmpty(noticeList)}">
                 <td colspan="6" th:text="#{common.msg.noData}"></td>
             </tr>
             <tr class="notice-pinned" th:each="topNotice, i: ${topNoticeList}"
