--- a/src/main/resources/public/template/token/tokenList.html
+++ b/src/main/resources/public/template/token/tokenList.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head></head>
 <body>
-    <div class="no-data-found" th:if="${#lists.isEmpty(tokenList)}">
+    <div class="no-data-found no-data-found" th:if="${#lists.isEmpty(tokenList)}">
         <img class="no-data-icon"/>
         <span class="no-data-text" th:text="#{common.msg.noData}"></span>
     </div>
