--- a/src/main/resources/public/template/user/userList.html
+++ b/src/main/resources/public/template/user/userList.html
@@ -20,7 +20,7 @@
         </thead>
         <tbody class="list-body">
             <input type="hidden" id="totalCount" th:value="${userListCount}"/>
-            <tr class="no-data-found" th:if="${#arrays.isEmpty(userList)}">
+            <tr class="no-data-found-list" th:if="${#arrays.isEmpty(userList)}">
                 <td colspan="9" th:text="#{common.msg.noData}"></td>
             </tr>
             <tr th:unless="${#arrays.isEmpty(userList)}" th:each="user: ${userList}">
